--- a/Web/3.html
+++ b/Web/3.html
@@ -16,15 +16,38 @@
         <li><a href="3.html" target="_blank" title="JavaScript">JavaScript</a></li>
     </ol>
     <h2>JavaScript</h2>
-    <p><a href="https://www.w3.org/standards/webdesign/script" target="_blank" title="JavaScript">JavaScript(English: JavaScript)</a>is an object-based script programming language. This language is commonly used
+    <p><a href="https://www.w3.org/standards/webdesign/script" target="_blank" title="JavaScript">JavaScript(English:
+            JavaScript)</a>is an object-based script programming language. This language is commonly used
         within a Web browser and has the ability to access built-in objects from other applications. It is also used for
         server programming, such as runtime environments such as Node.js. JavaScript was originally developed by
         BrendanEich of Netscape Communications Corporation,first named Mocha and later liveScript, and eventually became
-        JavaScript.<img src="JacaScript.jpg" width="100%"> There are similaritiesbetween Javaand syntax in Sun Microsystems,but this is actually because both
+        JavaScript.<img src="JacaScript.jpg" width="100%"> There are similaritiesbetween Javaand syntax in Sun
+        Microsystems,but this is actually because both
         languages are based on the basic syntax of the C language,and Java and JavaScript have a weak direct connection.
         Other than names and phrases,there are more similarities to self orscheme than Java. JavaScript is recognized as
         the language that best implements ecmascriptstandards and is supported by default in most browsers until
         ECMAScript 5 (ES5), but after ECMAScript 6 it is compiled into a transfilerfor browser compatibility.</p>
+    <p>
+    <div id="disqus_thread"></div>
+    <script>
+        /**
+        *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
+        *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables    */
+        /*
+        var disqus_config = function () {
+        this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
+        this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+        };
+        */
+        (function () { // DON'T EDIT BELOW THIS LINE
+            var d = document, s = d.createElement('script');
+            s.src = 'https://web1-n5hp3ixen4.disqus.com/embed.js';
+            s.setAttribute('data-timestamp', +new Date());
+            (d.head || d.body).appendChild(s);
+        })();
+    </script>
+    <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by
+            Disqus.</a></noscript></p>
 </body>
 
 </html>
