--- a/2.html
+++ b/2.html
@@ -7,16 +7,47 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WEB1 - CSS</title>
 </head>
+
 <body>
-<h1><a href="index.html">WEB</a></h1>
-<ol>
-    <li><a href="1.html" target="_blank" title="Hypertext Markup Language">HTML</a></li>
-    <li><a href="2.html" target="_blank" title="Cascading Style Sheets">CSS</a></li>
-    <li><a href="3.html" target="_blank" title="JavaScript">JavaScript</a></li>
-</ol>
-<h2>CSS</h2>
-<p>Dependent sheets or <a href="https://www.w3.org/Style/CSS/Overview.en.html" target="_blank" title="Cascading Style Sheets">cascading stylesheets (CSS)</a>are style sheet languagesthat describe how markup languagesare actuallydisplayed,and are often used in HTMLand XHTML,and can also be used in XML. It is standard in the default filename W3C,and has a high degree of freedom when defining layoutsand styles.
-    the default filename is style.css<img src="CSS.jpg" width="100%"> 
-    If the markup language(ex: HTML)is responsible for the body of the website, CSSis responsible for decorating it like clothes and accessories. In other words, you can leave the HTML structure intact and make changes to the CSS file to make it look like a completely different website.
-    For CSS3,which is currently under development,we've added the ability to replace images created by graphics editing programs,such as shadow effects, gradients, and transformations. In addition, various animation functions have been added to replace Adobe Flashto some extent.</p>
-</body></html>
+    <h1><a href="index.html">WEB</a></h1>
+    <ol>
+        <li><a href="1.html" target="_blank" title="Hypertext Markup Language">HTML</a></li>
+        <li><a href="2.html" target="_blank" title="Cascading Style Sheets">CSS</a></li>
+        <li><a href="3.html" target="_blank" title="JavaScript">JavaScript</a></li>
+    </ol>
+    <h2>CSS</h2>
+    <p>Dependent sheets or <a href="https://www.w3.org/Style/CSS/Overview.en.html" target="_blank"
+            title="Cascading Style Sheets">cascading stylesheets (CSS)</a>are style sheet languagesthat describe how
+        markup languagesare actuallydisplayed,and are often used in HTMLand XHTML,and can also be used in XML. It is
+        standard in the default filename W3C,and has a high degree of freedom when defining layoutsand styles.
+        the default filename is style.css<img src="CSS.jpg" width="100%">
+        If the markup language(ex: HTML)is responsible for the body of the website, CSSis responsible for decorating it
+        like clothes and accessories. In other words, you can leave the HTML structure intact and make changes to the
+        CSS file to make it look like a completely different website.
+        For CSS3,which is currently under development,we've added the ability to replace images created by graphics
+        editing programs,such as shadow effects, gradients, and transformations. In addition, various animation
+        functions have been added to replace Adobe Flashto some extent.</p>
+    <p>
+    <div id="disqus_thread"></div>
+    <script>
+        /**
+        *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
+        *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables    */
+        /*
+        var disqus_config = function () {
+        this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
+        this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+        };
+        */
+        (function () { // DON'T EDIT BELOW THIS LINE
+            var d = document, s = d.createElement('script');
+            s.src = 'https://web1-n5hp3ixen4.disqus.com/embed.js';
+            s.setAttribute('data-timestamp', +new Date());
+            (d.head || d.body).appendChild(s);
+        })();
+    </script>
+    <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by
+            Disqus.</a></noscript></p>
+</body>
+
+</html>
